--- a/index.html
+++ b/index.html
@@ -1,13 +1,47 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
-    <h1>IanSetia</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ullam aperiam iure distinctio laboriosam deserunt rerum ad ipsam corrupti vitae sunt voluptates dicta, qui, est iusto itaque laborum quo reiciendis.</p>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab ullam aperiam iure distinctio laboriosam deserunt rerum ad ipsam corrupti vitae sunt voluptates dicta, qui, est iusto itaque laborum quo reiciendis.</p>
+    <header>
+        <img class="logo" src="" alt="logo">
+        <nav>
+            <ul class="nav-links">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Projects</a></li>
+            </ul>
+        </nav>
+        <a class="cta" href="#">
+            <button>
+                Contact
+            </button>
+        </a>
+    </header>
+    <h1 class="website-heading">Ian Setia</h1>
+    <!--<a href="https://www.linkedin.com/in/ian-setia/" target="_blank">LinkedIn</a>-->
+    <div class="button-container">
+        <form action="https://www.linkedin.com/in/ian-setia/" target="_blank">
+            <button type="submit" class="linkedin">
+                LinkedIn
+            </button>
+        </form>
+        <form action="https://github.com/Ian2327/projects" target="_blank">
+            <button type="submit" class="github">
+                GitHub
+            </button>
+        </form>
+    </div>
+    
+    <p class="section-title">
+        [Insert Heading]
+    </p>
 </body>
 </html>
