--- a/index.html
+++ b/index.html
@@ -5,28 +5,36 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="styles.css">
+    <script src="script.js" defer></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@500&display=swap" rel="stylesheet">
 </head>
 <body>
     <header>
-        <img class="logo" src="" alt="logo">
+        <!--<img class="logo" src="C:\Users\Ian\Downloads\Screenshot_20231227_135542_Genshin Impact.jpg" alt="logo">-->
+        <a class="word-logo" href="#">Ian Setia</a>
         <nav>
             <ul class="nav-links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
+                <li><a href="#">Resume</a></li>
+                <li><a href="#">Source</a></li>
             </ul>
         </nav>
-        <a class="cta" href="#">
+        <a class="cta" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=isetia@nd.edu" target="_blank">
             <button>
                 Contact
             </button>
         </a>
+        <a href="#" class="menu-button">
+            <span class="bar"></span>
+            <span class="bar"></span>
+            <span class="bar"></span>
+        </a>
     </header>
     <h1 class="website-heading">Ian Setia</h1>
-    <!--<a href="https://www.linkedin.com/in/ian-setia/" target="_blank">LinkedIn</a>-->
     <div class="button-container">
         <form action="https://www.linkedin.com/in/ian-setia/" target="_blank">
             <button type="submit" class="linkedin">
@@ -42,6 +50,27 @@
     
     <p class="section-title">
         [Insert Heading]
+    </p>
+    <p>
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
     </p>
 </body>
 </html>
