commiting resume2 and websitev2 to align git

--- a/resume2.html
+++ b/resume2.html
@@ -178,7 +178,8 @@
             padding: 20px;    
             border-radius: 30px;   
             margin-bottom: 30px;
-            display: flex;     
+            display: flex;  
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.6);   
         }
         .col {
             background-color: inherit;
@@ -227,7 +228,7 @@
             /*border: 1px solid #ccc;*/
             border-radius: 8px;
             padding: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
             flex: 1;
             min-width: 225px;
         }
@@ -274,11 +275,12 @@
         }
 
         .popup-content {
-            background-color: inherit;
+            background-color: rgba(0,0,0,0.8);
             display: flex;
             flex-direction: column;
             margin: 15% auto; /* 15% from the top and centered */
             padding: 20px;
+            border-radius: 10px;
             width: 80%; /* Could be more or less, depending on screen size */
         }
 
@@ -354,7 +356,7 @@
         <nav class="nav-menu">
             <a class="nav-item" href="websitev2.html">Home</a>
             <a class="nav-item" href="about2.html">About</a>
-            <a class="nav-item" href="#">Projects</a>
+            <a class="nav-item" href="project2.html">Projects</a>
             <a class="nav-item" href="#">Resume</a>
             <a class="nav-item" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=isetia@nd.edu" target="_blank">Contact</a>
             <span></span>
@@ -372,7 +374,7 @@
             <span class="close" id="closePopup">&times;</span>
             <a class="popup-item" href="websitev2.html">Home</a>
             <a class="popup-item" href="about2.html">About</a>
-            <a class="popup-item" href="#">Projects</a>
+            <a class="popup-item" href="project2.html">Projects</a>
             <a class="popup-item" href="#">Resume</a>
             <a class="popup-item" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=isetia@nd.edu" target="_blank">Contact</a>
         </div>
