--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 <body>
     <header>
         <!--<img class="logo" src="C:\Users\Ian\Downloads\Screenshot_20231227_135542_Genshin Impact.jpg" alt="logo">-->
-        <a class="word-logo" href="#">Ian Setia</a>
+        <a class="word-logo" href="index.html">Ian Setia</a>
         <nav>
             <ul class="nav-links">
-                <li><a href="#">Home</a></li>
+                <li><a class="current" href="index.html">Home</a></li>
                 <li><a href="#">About</a></li>
                 <li><a href="#">Projects</a></li>
                 <li><a href="#">Resume</a></li>
-                <li><a href="#">Source</a></li>
+                <li class="slide-navbar"></li>
             </ul>
         </nav>
         <a class="cta" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=isetia@nd.edu" target="_blank">
@@ -34,43 +34,28 @@
             <span class="bar"></span>
         </a>
     </header>
-    <h1 class="website-heading">Ian Setia</h1>
-    <div class="button-container">
-        <form action="https://www.linkedin.com/in/ian-setia/" target="_blank">
-            <button type="submit" class="linkedin">
-                LinkedIn
-            </button>
-        </form>
-        <form action="https://github.com/Ian2327/projects" target="_blank">
-            <button type="submit" class="github">
-                GitHub
-            </button>
-        </form>
-    </div>
+    <main>
+        <h1 class="website-heading">Home</h1>
+        <div class="button-container">
+            <form action="https://www.linkedin.com/in/ian-setia/" target="_blank">
+                <button type="submit" class="linkedin">
+                    LinkedIn
+                </button>
+            </form>
+            <form action="https://github.com/Ian2327/projects" target="_blank">
+                <button type="submit" class="github">
+                    GitHub
+                </button>
+            </form>
+        </div>
+        
+        <p class="section-title">
+            [Insert Heading]
+        </p>
+        <p>
+            Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
+        </p>
+    </main>
     
-    <p class="section-title">
-        [Insert Heading]
-    </p>
-    <p>
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Perferendis repellat harum odit qui magni nostrum ut, nobis labore corrupti velit! Error cumque cupiditate, eveniet laboriosam ratione aliquid nostrum soluta corrupti.
-    </p>
 </body>
 </html>
