completed home page and format

--- a/resume2.html
+++ b/resume2.html
@@ -145,15 +145,6 @@
             font-family:'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
             /*font-family: sans-serif;*/
         }
-        .profile-pic {
-            display:block;
-            width: 15vw;
-            padding-top: 15vw; /* This creates the square effect */
-            position: relative;
-            border-radius: 50%;
-            float: left;
-            margin: 10px 20px;
-        }
 
         .menu-bar {
             display: none;
@@ -357,7 +348,7 @@
             <a class="nav-item" href="websitev2.html">Home</a>
             <a class="nav-item" href="about2.html">About</a>
             <a class="nav-item" href="project2.html">Projects</a>
-            <a class="nav-item" href="#">Resume</a>
+            <a class="nav-item" href="resume2.html">Resume</a>
             <a class="nav-item" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=isetia@nd.edu" target="_blank">Contact</a>
             <span></span>
         </nav>
@@ -375,7 +366,7 @@
             <a class="popup-item" href="websitev2.html">Home</a>
             <a class="popup-item" href="about2.html">About</a>
             <a class="popup-item" href="project2.html">Projects</a>
-            <a class="popup-item" href="#">Resume</a>
+            <a class="popup-item" href="resume2.html">Resume</a>
             <a class="popup-item" href="https://mail.google.com/mail/?view=cm&fs=1&tf=1&to=isetia@nd.edu" target="_blank">Contact</a>
         </div>
     </div>
