testing repo changed name

--- a/about2.html
+++ b/about2.html
@@ -358,7 +358,7 @@
                 flex-direction: column;
             }
         }
-        @media (max-width: 475px) {
+        @media (max-width: 475px) { /*phone version*/
             .phone-number{
                 font-size: 15px;
                 margin-right: 0px;
