renamed websitev2 to index

--- a/project2.html
+++ b/project2.html
@@ -573,13 +573,13 @@
 
 <body>
     <div class="heading">
-        <a class="logo" href="websitev2.html">Ian Setia</a>
+        <a class="logo" href="index.html">Ian Setia</a>
         <p class="phone-number" href="">+1 (984) 242-7481</p>
 
     </div>
     <header>
         <nav class="nav-menu">
-            <a class="nav-item" href="websitev2.html">Home</a>
+            <a class="nav-item" href="index.html">Home</a>
             <a class="nav-item" href="about2.html">About</a>
             <a class="nav-item" href="project2.html">Projects</a>
             <a class="nav-item" href="resume2.html">Resume</a>
@@ -598,7 +598,7 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close" id="closePopup">&times;</span>
-            <a class="popup-item" href="websitev2.html">Home</a>
+            <a class="popup-item" href="index.html">Home</a>
             <a class="popup-item" href="about2.html">About</a>
             <a class="popup-item" href="project2.html">Projects</a>
             <a class="popup-item" href="resume2.html">Resume</a>
