--- a/index.html
+++ b/index.html
@@ -308,7 +308,7 @@
 
         <header>
             <nav>
-                <a href="websitev2.html">Home</a>
+                <a href="index.html">Home</a>
                 <a href="about2.html">About</a>
                 <a href="project2.html">Projects</a>
                 <a href="resume2.html">Resume</a>
@@ -330,7 +330,7 @@
         <div id="popup" class="popup">
             <div class="popup-content">
                 <span class="close" id="closePopup">&times;</span>
-                <a class="popup-item" href="websitev2.html">Home</a>
+                <a class="popup-item" href="index.html">Home</a>
                 <a class="popup-item" href="about2.html">About</a>
                 <a class="popup-item" href="project2.html">Projects</a>
                 <a class="popup-item" href="resume2.html">Resume</a>
