--- a/about2.html
+++ b/about2.html
@@ -378,7 +378,7 @@
     </div>
     <header>
         <nav class="nav-menu">
-            <a class="nav-item" href="#">Home</a>
+            <a class="nav-item" href="index.html">Home</a>
             <a class="nav-item" href="about2.html">About</a>
             <a class="nav-item" href="project2.html">Projects</a>
             <a class="nav-item" href="resume2.html">Resume</a>
@@ -396,7 +396,7 @@
     <div id="popup" class="popup">
         <div class="popup-content">
             <span class="close" id="closePopup">&times;</span>
-            <a class="popup-item" href="#">Home</a>
+            <a class="popup-item" href="index.html">Home</a>
             <a class="popup-item" href="about2.html">About</a>
             <a class="popup-item" href="project2.html">Projects</a>
             <a class="popup-item" href="resume2.html">Resume</a>
