finished resume page

--- a/resume2.html
+++ b/resume2.html
@@ -201,12 +201,12 @@
             white-space: nowrap;  /* Prevents text from wrapping */
         }
 
-        .education, .experience, .certifications {
+        .education, .experience, .certifications, .service {
             background-color: inherit;
             margin-bottom: 20px;
         }
 
-        .education-cards, .experience-cards, .certification-cards {
+        .education-cards, .experience-cards, .certification-cards, .service-cards {
             background: inherit;
             display: flex;
             gap: 20px;
@@ -473,10 +473,18 @@
                             </div>
                         </div>
                     </div>
-                <h2 class="col-title">Interests</h2>
                 <h2 class="col-title">Service</h2>
                 <div class="service">
-
+                    <div class="service-cards">
+                        <div class="card">
+                            <h3>Liturgical Choir (Tenor I)</h3>
+                            <p>University of Notre Dame</p>
+                        </div>
+                        <div class="card">
+                            <h3>Altar Server</h3>
+                            <p>St. Francis of Assisi Parish</p>
+                        </div>
+                    </div>
                 </div>
             </div>
         </span>
