Fixed profile pic and home page banner

--- a/about2.html
+++ b/about2.html
@@ -490,7 +490,7 @@
         <div class="resume-box">
             <div class="about-box">
                 <img class="profile-pic"
-                    src="https://media.licdn.com/dms/image/v2/D5603AQGWfogxc8kRSQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1691634414626?e=1732752000&v=beta&t=7-zMuS6nxBIgJqtE7ldLqikTmLGqHwTo4-8JNCgWkb8"
+                    src="https://media.licdn.com/dms/image/v2/D5603AQGWfogxc8kRSQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1691634414626?e=1740614400&v=beta&t=RVUFuoVdRNYcoKYJncxmQSl84vDQ_C5QYIEz7Iy7VMw"
                     alt="">
                 <div class="about-desc">
                     <h1>About Me</h1>
@@ -503,8 +503,7 @@
                     <p>I am currently a Sophomore at the University of Notre Dame pursuing
                         a degree in Computer Science with a minor in Engineering Corporate Practice.
                         I have a deep cursiosity for data analysis and machine learning, and I'm eager to exlore and
-                        learn as much
-                        as I can during my academic journey.
+                        learn as much as I can during my academic journey.
                     </p>
                     <h2>Let's Connect</h2>
                     <p>
