--- a/project2.html
+++ b/project2.html
@@ -241,6 +241,40 @@
     </script> -->
     <script> 
         document.addEventListener("DOMContentLoaded", function () {
+            // Get the modal
+            var popup = document.getElementById("popup");
+            // Get the link that opens the modal
+            var openPopup = document.getElementById("menubar");
+            // Get the <span> element that closes the modal
+            var closePopup = document.getElementById("closePopup");
+
+            var popupItems = document.getElementsByClassName("popup-item");
+
+            Array.from(popupItems).forEach(function (item) {
+                item.onclick = function () {
+                    popup.style.display = "none"; // Hide the popup when an item is clicked
+                }
+            });
+
+            // When the user clicks on the link, open the modal
+            openPopup.onclick = function (event) {
+                event.preventDefault(); // Prevent the default anchor behavior
+                popup.style.display = "block"; // Show the popup
+            }
+
+            // When the user clicks on <span> (x), close the modal
+            closePopup.onclick = function () {
+                popup.style.display = "none"; // Hide the popup
+            }
+
+            // When the user clicks anywhere outside of the popup, close it
+            window.onclick = function (event) {
+                if (event.target == popup) {
+                    popup.style.display = "none"; // Hide the popup
+                }
+            }
+        });
+        document.addEventListener("DOMContentLoaded", function () {
             document.getElementById('repoForm').addEventListener('submit', function (event) {
                 event.preventDefault();
     
