Added banner and profile pic images

--- a/about2.html
+++ b/about2.html
@@ -490,7 +490,7 @@
         <div class="resume-box">
             <div class="about-box">
                 <img class="profile-pic"
-                    src="https://media.licdn.com/dms/image/v2/D5603AQGWfogxc8kRSQ/profile-displayphoto-shrink_400_400/profile-displayphoto-shrink_400_400/0/1691634414626?e=1740614400&v=beta&t=RVUFuoVdRNYcoKYJncxmQSl84vDQ_C5QYIEz7Iy7VMw"
+                    src="profile_pic.jpg"
                     alt="">
                 <div class="about-desc">
                     <h1>About Me</h1>
