Added jumps to stats

--- a/index.html
+++ b/index.html
@@ -49,6 +49,10 @@
             transition: background-color 0.3s ease, color 0.3s ease, border-color 0.3s ease, box-shadow 0.3s ease;
         }
 
+        a {
+            text-decoration: none;
+        }
+
         body {
             font-family: 'Inter', sans-serif;
             line-height: 1.6;
@@ -526,25 +530,25 @@
             <div class="row">
                 <div class="col-md-3 col-6">
                     <div class="stat-item fade-in">
-                        <span class="stat-number">3.91</span>
+                        <a class="stat-number" href="#education">3.91</a>
                         <div class="stat-label">GPA</div>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stat-item fade-in">
-                        <span class="stat-number">2</span>
+                        <a class="stat-number" href="#achievements">2</a>
                         <div class="stat-label">Patents Filed</div>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stat-item fade-in">
-                        <span class="stat-number">22+</span>
+                        <a class="stat-number" href="#about">22+</a>
                         <div class="stat-label">Technical Skills</div>
                     </div>
                 </div>
                 <div class="col-md-3 col-6">
                     <div class="stat-item fade-in">
-                        <span class="stat-number">2026</span>
+                        <a class="stat-number" href="#education">2026</a>
                         <div class="stat-label">Expected Graduation</div>
                     </div>
                 </div>
@@ -635,7 +639,8 @@
                             <h5 class="text-primary">Cardinal Gibbons High School</h5>
                             <p class="text-muted mb-2">Raleigh, North Carolina</p>
                             <p class="mb-1"><strong>Graduated:</strong> May 2023</p>
-                            <p class="mb-0"><strong>GPA:</strong> 4.896</p>
+                            <p class="mb-0"><strong>Weighted GPA:</strong> 4.896</p>
+                            <p class="mb-0"><strong>Unweighted GPA:</strong> 4.0</p>
                         </div>
                     </div>
                 </div>
