Fixed visual bugs and added new sections

--- a/index.html
+++ b/index.html
@@ -178,6 +178,7 @@
         .dark-mode-toggle:hover {
             background-color: var(--accent-color);
             color: white;
+            transform-origin: center;
             transform: scale(1.05);
         }
 
@@ -674,8 +675,55 @@
                 <div class="col-lg-4 mb-4">
                     <div class="card h-100 experience-card fade-in">
                         <div class="card-header">
+                            <h5 class="mb-0">Research Assistant</h5>
+                            <small>May 2025 - Present</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-primary">Mendoza College of Business at University of Notre Dame</h6>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Developed scalable web scrapers and leveraged APIs to collect metadata from conference papers, automating data extraction and analysis from both static and dynamic content</li>
+                                <li class="mb-2">• Created and cleaned author and AI-related conference paper databases</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 experience-card fade-in">
+                        <div class="card-header">
+                            <h5 class="mb-0">Introduction to Engineering Program Counselor</h5>
+                            <small>Jun 2025 - Jul 2025</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-primary">University of Notre Dame</h6>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Served as a Teaching Assistant during the day and Resident Assistant during the evenings</li>
+                                <li class="mb-2">• Led campers in education and recreational activities</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 experience-card fade-in">
+                        <div class="card-header">
+                            <h5 class="mb-0">Undergraduate Research Assistant</h5>
+                            <small>Jan 2025 - May 2025</small>
+                        </div>
+                        <div class="card-body">
+                            <h6 class="text-primary">Cooperative Computing Lab at University of Notre Dame</h6>
+                            <ul class="list-unstyled">
+                                <li class="mb-2">• Assisting in the development and optimization of distributed computing workflows using TaskVine, a scalable system for managing large-scale computional tasks, especially high-energy physics</li>
+                                <li class="mb-2">• Learning to design Python scripts for task scheduling, resource allocation, and data distribution across distributed systems</li>
+                                <li>• Analyzing performance, debugging, and improving system reliability in distributed computing environments</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-4 mb-4">
+                    <div class="card h-100 experience-card fade-in">
+                        <div class="card-header">
                             <h5 class="mb-0">Tutor for Student-Athletes</h5>
-                            <small>August 2024 - Present</small>
+                            <small>Aug 2024 - May 2025 | </small>
+                            <small>Aug 2025 - Present</small>
                         </div>
                         <div class="card-body">
                             <h6 class="text-primary">University of Notre Dame</h6>
@@ -692,7 +740,8 @@
                     <div class="card h-100 experience-card fade-in">
                         <div class="card-header">
                             <h5 class="mb-0">Green Team Member</h5>
-                            <small>August 2024 - Present</small>
+                            <small>Aug 2024 - Dec 2024 | </small>
+                            <small>Aug 2025 - Dec 2025</small>
                         </div>
                         <div class="card-body">
                             <h6 class="text-primary">Notre Dame Sustainability</h6>
@@ -708,7 +757,7 @@
                     <div class="card h-100 experience-card fade-in">
                         <div class="card-header">
                             <h5 class="mb-0">eBay Seller</h5>
-                            <small>May 2024 - August 2024</small>
+                            <small>May 2024 - Aug 2024</small>
                         </div>
                         <div class="card-body">
                             <h6 class="text-primary">Self Employed</h6>
